tests/errors/semantic/non_blocking/INCOMPATIBLE_TYPES_IN_ASSIGNMENT_3.py
import numpy as np


a = 4
a += 5.0
